--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="content">
             <div class="input-container">
-                <input type="text" class="input">
+                <input type="text" class="input" placeholder = "Enter your desired food">
                 <button onclick="">Get Recipe</button>
             </div>
             <div class="output-container">
