--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Generator</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="style/style.css">
+    <script src="script/main.js"></script>
 </head>
 <body>
     <div class="container">
@@ -16,7 +16,7 @@
             </div>
             <div class="output-container">
                 <div class="head">
-                    <img src="IMG_0929.JPG" alt="img" width="300px" height="200px" class="recipe-img">
+                    <img src="images/IMG_0929.JPG" alt="img" width="300px" height="200px" class="recipe-img">
                     <div class="right">
                         <h1 class="header">Lorem ipsum dolor sit</h1>                   
                         <ol>
