--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Generator</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
     <script src="script/main.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="content">
-            <div class="input-container">
-                <input type="text" class="input" placeholder = "Enter your desired food">
-                <button onclick="">Get Recipe</button>
-            </div>
-            <div class="output-container">
-                <div class="head">
-                    <img src="images/IMG_0929.JPG" alt="img" width="300px" height="200px" class="recipe-img">
-                    <div class="right">
-                        <h1 class="header">Lorem ipsum dolor sit</h1>                   
-                        <ol>
-                            <li class="list1">Lorem</li>
-                            <li class="list2">Lorem</li>
-                            <li class="list3">Lorem</li>
-                            <li class="list4">Lorem</li>
-                            <li class="list5">Lorem</li>
-                            <li class="list6">Lorem</li>
-                            <li class="list7">Lorem</li>
-                            <li class="list8">Lorem</li>
-                            <li class="list7">Lorem</li>
-                            <li class="list8">Lorem</li>
-                        </ol> 
-                    </div> 
-                </div>               
-                <p class="recipe-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad labore consequuntur inventore 
-                    animi facilis provident velit eum ullam perspiciatis dicta iste voluptatem quasi assumenda 
-                    hic quidem, non nisi nobis temporibus. 
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad labore consequuntur inventore 
-                    animi facilis provident velit eum ullam perspiciatis dicta iste voluptatem quasi assumenda 
-                    hic quidem, non nisi nobis temporibus. 
-                    Explicabo, eaque sint sequi inventore deleniti consequuntur dicta repellendus
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad labore consequuntur inventore 
-                    animi facilis provident velit eum ullam perspiciatis dicta iste voluptatem quasi assumenda 
-                    hic quidem, non nisi nobis temporibus. 
-                    Explicabo, eaque sint sequi inventore deleniti consequuntur dicta repellendus
-                    Explicabo, eaque sint sequi inventore deleniti consequuntur dicta repellendus voluptatibus?</p>
-            </div>
+      <div class="content">
+        <div class="input-container">
+          <input
+            type="text"
+            class="input"
+            placeholder="Enter your desired food"
+          />
+          <button onclick="">Get Recipe</button>
         </div>
+        <div class="output-container">
+          <div class="head">
+            <img
+              src="images/IMG_0929.JPG"
+              alt="img"
+              width="300px"
+              height="200px"
+              class="recipe-img"
+            />
+            <div class="right">
+              <h1 class="header">Lorem ipsum dolor sit</h1>
+              <ol>
+                <li class="list1">Lorem</li>
+                <li class="list2">Lorem</li>
+                <li class="list3">Lorem</li>
+                <li class="list4">Lorem</li>
+                <li class="list5">Lorem</li>
+                <li class="list6">Lorem</li>
+                <li class="list7">Lorem</li>
+                <li class="list8">Lorem</li>
+                <li class="list7">Lorem</li>
+                <li class="list8">Lorem</li>
+              </ol>
+            </div>
+          </div>
+          <p class="recipe-text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad labore
+            consequuntur inventore animi facilis provident velit eum ullam
+            perspiciatis dicta iste voluptatem quasi assumenda hic quidem, non
+            nisi nobis temporibus. Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Ad labore consequuntur inventore animi facilis
+            provident velit eum ullam perspiciatis dicta iste voluptatem quasi
+            assumenda hic quidem, non nisi nobis temporibus. Explicabo, eaque
+            sint sequi inventore deleniti consequuntur dicta repellendus Lorem
+            ipsum dolor, sit amet consectetur adipisicing elit. Ad labore
+            consequuntur inventore animi facilis provident velit eum ullam
+            perspiciatis dicta iste voluptatem quasi assumenda hic quidem, non
+            nisi nobis temporibus. Explicabo, eaque sint sequi inventore
+            deleniti consequuntur dicta repellendus Explicabo, eaque sint sequi
+            inventore deleniti consequuntur dicta repellendus voluptatibus?
+          </p>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
