Added some functionality for the API fetching

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Generator</title>
     <link rel="stylesheet" href="style/style.css" />
-    <script src="script/main.js"></script>
   </head>
   <body>
     <div class="container">
@@ -26,20 +25,21 @@
               width="300px"
               height="200px"
               class="recipe-img"
+              id="recipeImage"
             />
             <div class="right">
-              <h1 class="header">Lorem ipsum dolor sit</h1>
+              <h1 class="header">Ingredients</h1>
               <ol>
-                <li class="list1">Lorem</li>
-                <li class="list2">Lorem</li>
-                <li class="list3">Lorem</li>
-                <li class="list4">Lorem</li>
-                <li class="list5">Lorem</li>
-                <li class="list6">Lorem</li>
-                <li class="list7">Lorem</li>
-                <li class="list8">Lorem</li>
-                <li class="list7">Lorem</li>
-                <li class="list8">Lorem</li>
+                <li class="ingredientOne"></li>
+                <li class="ingredientTwo"></li>
+                <li class="ingredientThree"></li>
+                <li class="ingredientFour"></li>
+                <li class="ingredientFive"></li>
+                <li class="ingredientSix"></li>
+                <li class="ingredientSeven"></li>
+                <li class="ingredientEight"></li>
+                <li class="ingredientNine"></li>
+                <li class="ingredientTen"></li>
               </ol>
             </div>
           </div>
@@ -62,5 +62,7 @@
         </div>
       </div>
     </div>
+
+    <script src="script/main.js"></script>
   </body>
 </html>
