--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-    <div class="container">
+    <section class="container">
       <div class="content">
-        <div class="input-container">
+        <div class="input_wripper">
           <input
             type="text"
             class="input"
@@ -18,17 +18,22 @@
           />
           <button id="generateBtn">Get Recipe</button>
         </div>
+
         <div class="output-container">
           <div class="head">
-            <img
-              src="images/IMG_0929.JPG"
-              alt="img"
-              width="300px"
-              height="200px"
-              class="recipe-img"
-              id="recipeImage"
-            />
-            <div class="right">
+            <div class="">
+              <img
+                src="images/IMG_0929.JPG"
+                alt="img"
+                width="300px"
+                height="200px"
+                class="recipe_img"
+                id="recipeImage"
+              />
+              <p id="recipeName"></p>
+              <p id="recipeCategory"></p>
+            </div>
+            <div class="ingredents_wripper">
               <h1 class="header">Ingredients</h1>
               <ol>
                 <li id="ingredientOne"></li>
@@ -44,7 +49,7 @@
               </ol>
             </div>
           </div>
-          <p class="recipe-text" id="recipeDescription">
+          <p class="recipe_text" id="recipeDescription">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad labore
             consequuntur inventore animi facilis provident velit eum ullam
             perspiciatis dicta iste voluptatem quasi assumenda hic quidem, non
@@ -62,7 +67,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </section>
 
     <script src="/node_modules/axios/dist/axios.min.js"></script>
     <script src="script/main.js"></script>
