--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               />
               <p id="recipeName"></p>
               <p id="recipeCategory"></p>
+              <a href="" id="anchorLink" target="_blank"></a>
             </div>
             <div class="ingredents_wripper">
               <h1 class="header">Ingredients</h1>
